@@ -2,6 +2,11 @@ hptutil 1.02
 ---------------
 
 ----- cvs ci ------
+Tue Dec  5 03:17:40 UTC 2000
+sms:
+! using enum for linkWithImportLog instead of strings
+
+----- cvs ci ------
 Wed Oct  4 09:30:26 MSD 2000
 Fedor:
 * fixed size of fixing file
